--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         data : {require: 'check_login'},
         success : function(data) {
           if (data == 'true'){
-            window.location.href="index.html";
+            window.location.href="chat.html";
           }
         }
       });
