--- a/register.html
+++ b/register.html
@@ -28,7 +28,7 @@
           success : function(data){
             var json = JSON.parse(data);
             if (json.status == 'true'){
-              window.location.href = 'index.html'
+              window.location.href = 'chat.html'
             }
             else if(json.status == 'false') {
               $('#error').text('已经被注册');
